[package]
name = "zksync_proof_fri_compressor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vise = { git = "https://github.com/matter-labs/vise.git", version = "0.1.0", rev = "1c9cc500e92cf9ea052b230e114a6f9cce4fb2c1" }

zksync_types = { path = "../../core/lib/types" }
zksync_dal = { path = "../../core/lib/dal" }
zksync_config = { path = "../../core/lib/config" }
zksync_env_config = { path = "../../core/lib/env_config" }
zksync_object_store = { path = "../../core/lib/object_store" }
zksync_utils = { path = "../../core/lib/utils" }
prometheus_exporter = { path = "../../core/lib/prometheus_exporter" }
zksync_prover_fri_types = { path = "../prover_fri_types" }
zksync_queued_job_processor = { path = "../../core/lib/queued_job_processor" }
vk_setup_data_generator_server_fri = { path = "../vk_setup_data_generator_server_fri" }
vlog = { path = "../../core/lib/vlog" }

zkevm_test_harness_1_3_3 = { git = "https://github.com/matter-labs/era-zkevm_test_harness.git", branch = "v1.3.3", package = "zkevm_test_harness" }
zkevm_test_harness = { git = "https://github.com/matter-labs/era-zkevm_test_harness.git", branch = "v1.4.1" }

anyhow = "1.0"
tracing = "0.1"
structopt = "0.3.26"
tokio = { version = "1", features = ["time"] }
futures = { version = "0.3", features = ["compat"] }
ctrlc = { version = "3.1", features = ["termination"] }
async-trait = "0.1"
bincode = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
