[package]
name = "zksync_proof_fri_compressor"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
vise.workspace = true
zksync_types.workspace = true
prover_dal.workspace = true
zksync_config.workspace = true
zksync_env_config.workspace = true
zksync_object_store.workspace = true
zksync_prover_interface.workspace = true
zksync_utils.workspace = true
prometheus_exporter.workspace = true
zksync_prover_fri_types.workspace = true
zksync_queued_job_processor.workspace = true
vk_setup_data_generator_server_fri.workspace = true
vlog.workspace = true

zkevm_test_harness_1_3_3.workspace = true
circuit_sequencer_api.workspace = true
zkevm_test_harness.workspace = true

anyhow.workspace = true
tracing.workspace = true
structopt.workspace = true
tokio = { workspace = true, features = ["time", "macros"] }
futures = { workspace = true, features = ["compat"] }
ctrlc = { workspace = true, features = ["termination"] }
async-trait.workspace = true
bincode.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }

