[package]
name = "zksync_prover"
version = "0.1.0"
edition = "2018"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-era"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
publish = false # We don't want to publish our binaries.

[dependencies]
vise = { git = "https://github.com/matter-labs/vise.git", version = "0.1.0", rev = "1c9cc500e92cf9ea052b230e114a6f9cce4fb2c1" }

zksync_dal = { path = "../../core/lib/dal" }
zksync_config = { path = "../../core/lib/config" }
zksync_env_config = { path = "../../core/lib/env_config" }
zksync_utils = { path = "../../core/lib/utils" }
zksync_prover_utils = { path = "../../core/lib/prover_utils" }
zksync_circuit_breaker = { path = "../../core/lib/circuit_breaker" }
zksync_eth_client = { path = "../../core/lib/eth_client" }
zksync_types = { path = "../../core/lib/types" }
prometheus_exporter = { path = "../../core/lib/prometheus_exporter" }
vlog = { path = "../../core/lib/vlog" }
zksync_verification_key_generator_and_server = { path = "../../core/bin/verification_key_generator_and_server" }
zksync_object_store = { path = "../../core/lib/object_store" }

setup_key_generator_and_server = { path = "../setup_key_generator_and_server" }
api = { git = "https://github.com/matter-labs/era-heavy-ops-service.git", branch = "v1.3.3", features = [
    "gpu",
], optional = true, default-features = false }
prover-service = { git = "https://github.com/matter-labs/era-heavy-ops-service.git", branch = "v1.3.3", features = [
    "gpu",
], optional = true, default-features = false }

zkevm_test_harness = { git = "https://github.com/matter-labs/era-zkevm_test_harness.git", branch = "v1.3.3" }

anyhow = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["time"] }
futures = { version = "0.3", features = ["compat"] }
ctrlc = { version = "3.1", features = ["termination"] }
thiserror = "1.0"
chrono = "0.4"
serde_json = "1.0"
ethabi = "18.0.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.2"
reqwest = { version = "0.11", features = ["blocking"] }
queues = "1.1.0"
local-ip-address = "0.5.0"

[features]
default = []
gpu = ["api", "prover-service", "setup_key_generator_and_server/gpu"]
