[package]
name = "prover_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dialoguer.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
clap = { workspace = true, features = ["derive"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
bincode.workspace = true
hex.workspace = true
anyhow.workspace = true
zksync_config.workspace = true
zksync_env_config.workspace = true
zksync_db_connection.workspace = true
zksync_basic_types.workspace = true
zksync_types.workspace = true
zksync_prover_fri_types.workspace = true
zksync_prover_interface.workspace = true
prover_dal.workspace = true
zksync_eth_client.workspace = true
zksync_contracts.workspace = true
zksync_dal.workspace = true
strum.workspace = true
colored.workspace = true
sqlx.workspace = true
