[package]
name = "zksync_prover_dal"
version = "0.1.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-era"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tokio = "1.36.0"
strum = { version = "0.24", features = ["derive"] }
vise = { git = "https://github.com/matter-labs/vise.git", version = "0.1.0", rev = "1c9cc500e92cf9ea052b230e114a6f9cce4fb2c1" }

sqlx = { version = "0.7.3", default-features = false, features = [
    "runtime-tokio",
    "tls-native-tls",
    "macros",
    "postgres",
    "bigdecimal",
    "rust_decimal",
    "chrono",
    "json",
    "migrate",
    "ipnetwork",
] }


zksync_db_connection = { path = "../../core/lib/db_connection" }
zksync_types = { path = "../../core/lib/types" }