[package]
name = "prover_dal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zksync_db_connection = { path = "../../core/lib/db_connection" }
zksync_types = {  path = "../../core/lib/types" }

strum = { version = "0.24", features = ["derive"] }
sqlx = { version = "0.7.3", default-features = false, features = [
    "runtime-tokio",
    "tls-native-tls",
    "macros",
    "postgres",
    "bigdecimal",
    "rust_decimal",
    "chrono",
    "json",
    "migrate",
    "ipnetwork",
] }
async-trait = "0.1.74"