[package]
name = "prover_dal"
version = "0.1.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-era"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]

[dependencies]
zksync_db_connection = { path = "../../core/lib/db_connection" }
zksync_basic_types = { path = "../../core/lib/basic_types" }

strum = { version = "0.24", features = ["derive"] }
sqlx = { version = "0.7.3", default-features = false, features = [
    "runtime-tokio",
    "tls-native-tls",
    "macros",
    "postgres",
    "bigdecimal",
    "rust_decimal",
    "chrono",
    "json",
    "migrate",
    "ipnetwork",
] }
