[package]
name = "zksync_prover_fri"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
vise.workspace = true
zksync_types.workspace = true
prover_dal.workspace = true
zksync_config.workspace = true
zksync_env_config.workspace = true
prometheus_exporter.workspace = true
vlog.workspace = true
zksync_object_store.workspace = true
zksync_queued_job_processor.workspace = true
zksync_prover_fri_utils.workspace = true
zksync_prover_fri_types.workspace = true
zksync_utils.workspace = true
vk_setup_data_generator_server_fri.workspace = true
shivini = { workspace = true, optional = true, features = [
    "circuit_definitions",
    "zksync",
] }

zkevm_test_harness.workspace = true
circuit_definitions = { workspace = true, features = [ "log_tracing" ] }

anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["time", "macros"] }
futures = { workspace = true, features = ["compat"] }
ctrlc = { workspace = true, features = ["termination"] }
serde = { workspace = true, features = ["derive"] }
async-trait.workspace = true
local-ip-address.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
regex.workspace = true

[features]
default = []
gpu = ["shivini", "vk_setup_data_generator_server_fri/gpu"]
