[package]
name = "zksync_prover_fri_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
zksync_types = { path = "../../core/lib/types" }
zksync_dal = { path = "../../core/lib/dal" }
zksync_config = { path = "../../core/lib/config" }
zksync_env_config = { path = "../../core/lib/config" }
zksync_object_store = { path = "../../core/lib/object_store" }
zksync_utils = { path = "../../core/lib/utils" }
prometheus_exporter = { path = "../../core/lib/prometheus_exporter" }
vlog = { path = "../../core/lib/vlog" }

anyhow = "1.0"
tracing = "0.1"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["time"] }
ctrlc = { version = "3.1", features = ["termination"] }
async-trait = "0.1"
futures = { version = "0.3", features = ["compat"] }
serde = { version = "1.0", features = ["derive"] }
metrics = "0.21"
log = "0.4.20"
