[package]
name = "zksync_prover_fri_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
vise = { git = "https://github.com/matter-labs/vise.git", version = "0.1.0", rev = "1c9cc500e92cf9ea052b230e114a6f9cce4fb2c1" }

zksync_types = { path = "../../core/lib/types" }
zksync_dal = { path = "../../core/lib/dal" }
zksync_config = { path = "../../core/lib/config" }
zksync_env_config = { path = "../../core/lib/env_config" }
zksync_object_store = { path = "../../core/lib/object_store" }
zksync_prover_interface = { path = "../../core/lib/prover_interface" }
zksync_utils = { path = "../../core/lib/utils" }
prometheus_exporter = { path = "../../core/lib/prometheus_exporter" }
vlog = { path = "../../core/lib/vlog" }

anyhow = "1.0"
tracing = "0.1"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["time"] }
ctrlc = { version = "3.1", features = ["termination"] }
async-trait = "0.1"
futures = { version = "0.3", features = ["compat"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4.20"
