[package]
name = "zksync_prover_fri_gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
vise.workspace = true
zksync_types.workspace = true
prover_dal.workspace = true
zksync_config.workspace = true
zksync_env_config.workspace = true
zksync_object_store.workspace = true
zksync_prover_interface.workspace = true
zksync_utils.workspace = true
prometheus_exporter.workspace = true
vlog.workspace = true

anyhow.workspace = true
tracing.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
tokio = { workspace = true, features = ["time", "macros"] }
ctrlc = { workspace = true, features = ["termination"] }
async-trait.workspace = true
futures = { workspace = true, features = ["compat"] }
serde = { workspace = true, features = ["derive"] }
log.workspace = true
