[package]
name = "zksync_prover_fri_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zksync_object_store = { path = "../../core/lib/object_store" }
zksync_config = { path = "../../core/lib/config" }
zksync_types = { path = "../../core/lib/types" }
zksync_prover_fri_types = { path = "../prover_fri_types" }
zksync_dal = { path = "../../core/lib/dal" }

tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
metrics = "0.21"
