[package]
name = "zksync_prover_fri_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vise = { git = "https://github.com/matter-labs/vise.git", version = "0.1.0", rev = "dd05139b76ab0843443ab3ff730174942c825dae" }

zksync_object_store = { path = "../../core/lib/object_store" }
zksync_config = { path = "../../core/lib/config" }
zksync_types = { path = "../../core/lib/types" }
zksync_prover_fri_types = { path = "../prover_fri_types" }

tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
