[package]
name = "zksync_prover_fri_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vise = { git = "https://github.com/matter-labs/vise.git", version = "0.1.0", rev = "1c9cc500e92cf9ea052b230e114a6f9cce4fb2c1" }

zksync_object_store = { path = "../../core/lib/object_store" }
zksync_config = { path = "../../core/lib/config" }
zksync_types = { path = "../../core/lib/types" }
zksync_prover_fri_types = { path = "../prover_fri_types" }
zksync_dal = { path = "../../core/lib/dal" }
zksync_utils = { path = "../../core/lib/utils" }

tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
regex = "1.7.2"
anyhow = "1.0"
