[package]
name = "zksync_prover_tee_gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
rand.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
vlog.workspace = true
zksync_config.workspace = true
zksync_env_config.workspace = true
zksync_object_store.workspace = true
zksync_tee_verifier.workspace = true
zksync_types.workspace = true
