[package]
name = "zksync_prover_tee_gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap = { workspace = true, features = ["derive"] }
ctrlc = { workspace = true, features = ["termination"] }
prometheus_exporter.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
secp256k1.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["time", "macros"] }
tracing.workspace = true
url.workspace = true
vise.workspace = true
vlog.workspace = true
zksync_config.workspace = true
zksync_env_config.workspace = true
zksync_object_store.workspace = true
zksync_prover_config.workspace = true
zksync_prover_interface.workspace = true
zksync_tee_verifier.workspace = true
zksync_types.workspace = true
zksync_utils.workspace = true
